# Studium

./: Readme.md  test.txt
.devcontainer/: Dockerfile
Semester1/: devcontainer.json
Semester1/Unterricht/Anders/: a.out  cmake.c  funktionen.h.gch  scanf.c  uebung.c  unterricht.c
Semester1/Unterricht/Cmake/: CMakeLists.txt  example.c
Semester1/Unterricht/Funktionen/: funktionen.c  main.c
Semester1/Unterricht/Libraries/: CMakeLists.txt  test.sh
Semester1/Unterricht/Libraries/include/: batman.h  sum.h
Semester1/Unterricht/Libraries/src/: batman.c  main.c  sum.c
Semester1/Unterricht/Pointer/: CMakeLists.txt  pointer.c
Semester2/Hausaufgaben-1/: CMakeLists.txt  Hausaufgabe_1-2.c  Hausaufgabe_1-3.c  Hausaufgabe_1-4.c  Hausaufgabe_1-5.c  run_cmake.sh
Semester2/Hausaufgaben-1/Hausaufgabe_1-6/: CMakeLists.txt
Semester2/Hausaufgaben-1/Hausaufgabe_1-6/include/: student.h
Semester2/Hausaufgaben-1/Hausaufgabe_1-6/src/: main.c  student.c
Semester2/Hausaufgaben-2/Hausaufgabe_2-1/: run_cmake.sh
Semester2/Unterricht/: CMakeLists.txt  class.cpp  helloworld.cpp  inheritance.cpp  malloc.c  malloc.cpp
